# xcp-emu-manager

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  emu-manager.opam
cmake/: FindEmp.cmake  FindJsonC.cmake
src/: arg-list.c  arg-list.h  control.c  control.h  emu-client.c  emu-client.h  emu.c  emu.h  main.c  qmp.c  qmp.h
