opam-version: "1.2"
author: "John Else <john.else@gmail.com>"
maintainer: "John Else <john.else@gmail.com>"
homepage: "https://github.com/xcp-ng/xcp-emu-manager"
bug-reports: "https://github.com/xcp-ng/xcp-emu-manager/issues"
dev-repo: "git://github.com/xcp-ng/xcp-emu-manager"
build: [
  "jbuilder" "build" "-p" name "-j" jobs
]
depends: [
  "jbuilder" {build}
  "ezjsonm"
]
